--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Amethyst Portfolio</title>
   </head>
   <body>
-    <h1>Welcome to Amethyst Portfolio</h1>
+    <h1>Amethyst Portfolio</h1>
     <p>This is the homepage of your GitHub Pages site.</p>
   </body>
 </html>
