github pages theme

--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amethyst Portfolio</title>
+
+    <!-- Add a favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+    <!-- Add basic styles for better visuals -->
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        margin: 0;
+        padding: 20px;
+        background-color: #f9f9f9;
+        color: #333;
+      }
+      h1 {
+        color: #6a0dad; /* Amethyst color */
+      }
+    </style>
   </head>
   <body>
     <h1>Amethyst Portfolio</h1>
-    <p>This is the homepage of your GitHub Pages site.</p>
+    <p>
+      Welcome to the homepage of your GitHub Pages site. Stay tuned for more
+      updates!
+    </p>
   </body>
 </html>
