github pages theme

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amethyst Portfolio</title>
-
-    <!-- Add a favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-
-    <!-- Add basic styles for better visuals -->
+    <link
+      rel="icon"
+      href="/assets/images/amethyst_icon.png"
+      type="image/x-icon"
+    />
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -19,7 +19,7 @@
         color: #333;
       }
       h1 {
-        color: #6a0dad; /* Amethyst color */
+        color: #6a0dad;
       }
     </style>
   </head>
