github pages theme

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Amethyst Portfolio</title>
     <link
       rel="icon"
-      href="/assets/images/amethyst_icon.png"
+      href="./assets/images/amethyst_icon.png"
       type="image/x-icon"
     />
     <style>
