--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amethyst Portfolio</title>
-    <link
-      rel="icon"
-      href="./assets/images/amethyst_icon.png"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="./assets/images/menulogo.png" type="image/x-icon" />
     <style>
       body {
         font-family: Arial, sans-serif;
