deploy: fd44e295c3f3b3bf0c8537d75050e0edc1beb736

--- a/index.html
+++ b/index.html
@@ -1,29 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amethyst Portfolio</title>
-    <link rel="icon" href="./assets/images/menulogo.png" type="image/x-icon" />
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 20px;
-        background-color: #f9f9f9;
-        color: #333;
-      }
-      h1 {
-        color: #6a0dad;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Amethyst Portfolio</h1>
-    <p>
-      Welcome to the homepage of your GitHub Pages site. Stay tuned for more
-      updates!
-    </p>
-  </body>
-</html>
+<h1 id="welcome-to-my-portfolio">Welcome to My Portfolio!</h1>
+
+<p>This is a website built using a <strong>purple theme</strong> to showcase my projects and skills.</p>
+
+<h2 id="about-me">About Me</h2>
+
+<p>I’m a passionate web developer with a focus on creating modern, responsive, and visually appealing websites. I specialize in front-end development and enjoy building user-friendly web applications.</p>
+
+<h2 id="my-projects">My Projects</h2>
+
+<p>Here are a few projects I’ve worked on recently:</p>
+
+<ul>
+  <li><strong>Project 1</strong>: A responsive website for a local business.</li>
+  <li><strong>Project 2</strong>: A mobile app for task management with real-time collaboration.</li>
+  <li><strong>Project 3</strong>: A portfolio website showcasing my work (like this one!).</li>
+</ul>
+
+<h2 id="contact-me">Contact Me</h2>
+
+<p>Feel free to reach out to me if you’re interested in collaborating on a project or just want to say hello! You can email me at <a href="mailto:email@example.com">email@example.com</a>.</p>
