--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <h1>Amethyst Portfolio</h1>
+    <h1>Ticorporate Portfolio Riku Ruotsalainen</h1>
     <p>
       Welcome to the homepage of your GitHub Pages site. Stay tuned for more
       updates!
