--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
   </head>
   <body>
     <h1>Ticorporate Portfolio Riku Ruotsalainen</h1>
-    <p>
-      Welcome to the homepage of your GitHub Pages site. Stay tuned for more
-      updates!
-    </p>
+    <p>Miten päätyö ja sivutyö näkyvät esityksessä/portfoliossa?</p>
+    <p>Mitä olen oppinut ja oivaltanut?</p>
+    <p>Mitkä tavoitteet toteutuivat ja mitkä jäivät toteutumatta?</p>
+    <p>Mitä opin suunnitelman ulkopuolelta?</p>
+    <p>Miten näen tulevaisuuden</p>
+    <p>Millaiseen työhön haluan sijoittua?</p>
+    <p>Kuinka opintojakso tuki niitä tavoitteita?</p>
+    <p>Mitä osaamista minun tulee vielä hankkia, jotta saavutan tavoitteeni?</p>
+    <p>Mitkä ovat omat vahvuuteni ja ovatko ne selventyneet?</p>
+    <p>Miksi valitsin juuri nämä dokumentit/työt portfoliooni?</p>
   </body>
 </html>
