--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     <p>Mitkä ovat omat vahvuuteni ja ovatko ne selventyneet?</p>
     <p>Miksi valitsin juuri nämä dokumentit/työt portfoliooni?</p>
     <div class="koodi">
-      <h2>Koodi testi</h2><pre><code class="language-javascript">
+      <h2>horoscope koodi</h2>
+      <pre><code class="language-javascript">
         &lt;HoroscopeButton
           key={horoscopeText}
           title={horoscopeText} // Passing the ID of the matched horoscope
@@ -77,6 +78,7 @@
           }
         /&gt;
       </code></pre>
+      <h2>HoroscopeData koodi</h2>
       <pre><code class="language-javascript">
         const HoroscopeData: React.FC<HoroscopeDataProps> = ({ route }) => {
           const { itemId } = route.params; // Tuotu ID propsina
