--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
       </div>
       <div class="text-container">
         <h2>Mikä on Amethyst</h2>
-        <p>Amethyst on mobiilisovellus jonka ydintoimintoina on
-          päivän tarot, päivän horoskooppi, unipäiväkirja sekä kristalliopas.</p>
+        <p>Amethyst on monipuolinen mobiilisovellus, joka tukee henkistä hyvinvointia ja itsetuntemusta. Sovellus tarjoaa päivittäisen tarotkortin ja horoskoopin, jotka inspiroivat ja auttavat löytämään suuntaa päivittäisissä haasteissa. Mukana on myös unipäiväkirja unien tulkintaan sekä kattava kristalliopas, joka esittelee kristallien ominaisuuksia ja käyttötapoja.</p>
       </div>
     </div>
     <div class="koodi">
